2010-06-30  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-05-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44059
	* config/elfos.h (ASM_DECLARE_OBJECT_NAME): Use qnu_unique_object
	even for DECL_ONE_ONLY DECL_ARTIFICIAL !TREE_READONLY decls.
	* config/alpha/elf.h (ASM_DECLARE_OBJECT_NAME): Likewise.
	* dwarf2asm.c (dw2_output_indirect_constant_1): Set TREE_READONLY
	on DW.ref.* decls.

2010-06-30  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/43905
	* tree-sra.c (encountered_recursive_call): Removed with all its uses.
	(convert_callers): Do not handle recursive calls specially.
	(create_abstract_origin): Removed.
	(modify_function): Version the call graph node instead of creating
	abstract origins and dealing with same_body aliases.
	(ipa_sra_preliminary_function_checks): Check whether the function
	is versionable.
	* Makefile.in (tree-sra.o): Add TREE_INLINE_H to dependencies.

2010-06-30  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2010-05-29  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (clone_function_name): Made public.
	* cgraph.h (clone_function_name): Declare.
	* cgraphunit.c (cgraph_function_versioning): Produce new name.

2010-06-29  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2010-05-17  Martin Jambor  <mjambor@suse.cz>

        PR middle-end/44133
        * tree-sra.c (create_access_replacement): New parameter rename, mark
        the replaement for renaming only when it is true.
        (get_access_replacement): Pass true in the rename parameter of
        create_access_replacement.
        (get_unrenamed_access_replacement): New function.
        (replace_uses_with_default_def_ssa_name): New parameter racc, get the
        replacement declaration from it.

2010-06-29  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2010-04-13  Martin Jambor  <mjambor@suse.cz>

        * tree-sra.c (replace_uses_with_default_def_ssa_name): New function.